// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinCodeBox /> should match snapshot 1`] = `
<View
  style={Object {}}
>
  <View
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5"
    />
  </View>
  <TextInput
    autoCorrect={false}
    autoFocus={true}
    blurOnSubmit={false}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    style={
      Object {
        "bottom": -300,
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    value=""
  />
</View>
`;

exports[`<PinCodeBox /> should show two sovrin symbol if two digits are entered 1`] = `
<View
  style={Object {}}
>
  <View
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0"
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1"
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4"
    />
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5"
    />
  </View>
  <TextInput
    autoCorrect={false}
    autoFocus={true}
    blurOnSubmit={false}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    style={
      Object {
        "bottom": -300,
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    value="12"
  />
</View>
`;
